--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,84 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.fontstyletitr{
+    color: #000000;
+    font-family: Yekan Bakh;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    padding-top: 5px;
+    margin-bottom: 5px;
+}
+
+.fontstylelable{
+    color: var(--purpple, #9365f8);
+    text-align: right;
+
+    /* text header */
+    font-family: Yekan Bakh FaNum;
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 201.9%; /* 70.665px */
+    display: block;
+}
+
+.fontstyleinput{
+    color: var(--text-in-box, rgba(153, 146, 161, 0.73));
+    text-align: right;
+
+    /* text style */
+    font-family: Yekan Bakh NoEn;
+    font-size: 10px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 201.9%; /* 52.494px */
+    width: 100%;
+    height: 50px;
+    border-radius: 40px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+    border: none;
+    padding-right: 20px;
+    display: block;
+}
+
+
+#submit{
+    cursor: pointer;
+    background: #734BC7;
+    color: #fff;
+    width: 120px;
+    height: 40px;
+    border-radius: 10px;
+    margin-top: 20px;
+    margin-right: 240px;
+    box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
+    transition: 1s all ease;
+    font-size: 18px;
+    font-family: Yekan Bakh NoEn;
+    text-align: center;
+    padding-top: 6px;
+}
+
+#submit:hover{
+    background: #290d64;
+}
+
+.bgbr{
+    background: #a1a1a1;
+}
+
+.bxsh{
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+}
+
+.bgstyle{
+    background: #7F00FF;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #E100FF, #7F00FF);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #E100FF, #7F00FF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
