--- a/src/input.css
+++ b/src/input.css
@@ -43,7 +43,7 @@
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
     border: none;
     padding-right: 20px;
-    padding-left: ;
+    padding-left: 20px;
     display: block;
 }
 
