--- a/src/input.css
+++ b/src/input.css
@@ -28,7 +28,7 @@
 }
 
 .fontstyleinput{
-    color: var(--text-in-box, rgba(153, 146, 161, 0.73));
+    color: #000;
     text-align: right;
 
     /* text style */
@@ -100,10 +100,9 @@
 }
 
 .bgstyle{
-    background: #7F00FF;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #E100FF, #7F00FF);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #E100FF, #7F00FF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+    background: #c0392b;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #8e44ad, #c0392b);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #8e44ad, #c0392b); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 #back{
