--- a/src/input.css
+++ b/src/input.css
@@ -55,7 +55,7 @@ body{
 #submit{
     cursor: pointer;
     background: #734BC7;
-    color: #fff;
+    color: #000;
     width: 120px;
     height: 40px;
     border-radius: 10px;
@@ -68,32 +68,48 @@ body{
     padding-top: 6px;
     /* position: absolute;
     right: 220px; */
-    
     margin-left: auto;
+
+    /* From https://css.glass */
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 #submit:hover{
     background: #290d64;
+    color: #fff;
 }
 
 #submitfirst{
     cursor: pointer;
     background: #734BC7;
-    color: #fff;
+    color: #000;
     width: 120px;
     height: 40px;
     border-radius: 10px;
-    
     box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
     transition: 1s all ease;
     font-size: 18px;
     /* font-family: Yekan Bakh NoEn; */
     text-align: center;
     padding-top: 6px;
+
+    /* From https://css.glass */
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 #submitfirst:hover{
     background: #290d64;
+    color: #fff;
 }
 
 .bgbr{
@@ -113,7 +129,7 @@ body{
 #back{
     cursor: pointer;
     background: #734BC7;
-    color: #fff;
+    color: #000;
     width: 120px;
     height: 40px;
     border-radius: 10px;
@@ -124,10 +140,19 @@ body{
     /* font-family: Yekan Bakh NoEn; */
     text-align: center;
     padding-top: 6px;
+
+    /* From https://css.glass */
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 #back:hover{
     background: #290d64;
+    color: #fff;
 }
 
 
