--- a/src/input.css
+++ b/src/input.css
@@ -8,7 +8,7 @@ body{
 }
 
 .fontstyletitr{
-    color: #000000;
+    color: #fff;
     font-family: system-ui;
     font-size: 30px;
     font-style: normal;
@@ -16,12 +16,13 @@ body{
     line-height: normal;
     padding-top: 5px;
     margin-bottom: 5px;
+    font-family: Yekan Bakh NoEn;
 }
 
 .fontstylelable{
-    color: #000000;
+    color: #fff;
     text-align: right;
-
+    font-family: Yekan Bakh NoEn;
     /* text header */
     font-family: system-ui;
     font-size: 17px;
@@ -44,10 +45,9 @@ body{
     width: 100%;
     height: 50px;
     border-radius: 40px;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
     border: none;
-    padding-right: 20px;
-    padding-left: 20px;
+    padding-right: 10px;
     display: block;
 }
 
@@ -133,13 +133,13 @@ body{
     width: 120px;
     height: 40px;
     border-radius: 10px;
-    margin-right: 240px;
     box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
     transition: 1s all ease;
     font-size: 18px;
     /* font-family: Yekan Bakh NoEn; */
     text-align: center;
     padding-top: 6px;
+    margin-right: auto;
 
     /* From https://css.glass */
     background: rgba(255, 255, 255, 0.2);
@@ -165,3 +165,29 @@ body{
     -webkit-backdrop-filter: blur(5px);
     border: 1px solid rgba(255, 255, 255, 0.3);
 }
+
+
+.form1style{
+    display: none;
+}
+
+
+
+
+.form2stylebtn{
+    display: none;
+}
+
+.form2style{
+    display: none;
+}
+
+
+
+
+
+
+
+
+
+
